--- a/MyyCommerce/MyyCommerce/MyyCommerce.csproj
+++ b/MyyCommerce/MyyCommerce/MyyCommerce.csproj
@@ -30,5 +30,7 @@
     <Folder Include="Domain\" />
     <Folder Include="Views\Produto\" />
     <Folder Include="Views\Pedido\" />
+    <Folder Include="Views\User\" />
+    <Folder Include="Views\Log\" />
   </ItemGroup>
 </Project>
